sfdx-source/main/default/objects/VCC_Progress_Note_Detail__c/VCC_Progress_Note_Detail__c.object-meta.xml
<CustomObject>
    <description>Stores details from the progress note</description>
    <label>Progress Note Detail</label>
    <nameField>
        <displayFormat>PND-{00000}</displayFormat>
        <label>Progress Note Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress Notes Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>