sfdx-source/main/default/objects/VCC_Progress_Note_Detail__c/fields/VCC_CSSRS_Data__c.field-meta.xml
<CustomField>
    <fullName>VCC_CSSRS_Data__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>This field will contain data from the Columbia Protocol flow for the SOAPIE template on the Clinical Triage 2.0 Progress Note</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CSSRS Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>