sfdx-source/main/default/objects/VCC_Progress_Note_Detail__c/fields/VCC_Is_CSSRS_Finished__c.field-meta.xml
<CustomField>
    <fullName>VCC_Is_CSSRS_Finished__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This field shows whether the Columbia Screening has been completed on the Clinical Triage 2.0 Progress Note SOAPIE template</description>
    <label>Is CSSRS Finished</label>
    <type>Checkbox</type>
</CustomField>