sfdx-source/main/default/objects/VCC_Progress_Note_Detail__c/fields/VCC_Progress_Note__c.field-meta.xml
<CustomField>
    <fullName>VCC_Progress_Note__c</fullName>
    <description>This is the master-detail relationship to the parent Progress Note custom object which is a one to one relationship.</description>
    <label>Progress Note</label>
    <referenceTo>VCC_Progress_Note__c</referenceTo>
    <relationshipLabel>Progress Notes Detail</relationshipLabel>
    <relationshipName>Progress_Notes_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>