sfdx-source/main/default/objects/VCC_Progress_Note_Detail__c/fields/VCC_T2T_Data__c.field-meta.xml
<CustomField>
    <fullName>VCC_T2T_Data__c</fullName>
    <description>This field stores the data for the Test to Treat data when Medical Provider does an assessment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>T2T Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>