sfdx-source/main/default/objects/VCC_Progress_Note_Detail__c/fields/VCC_T2T_Demographics__c.field-meta.xml
<CustomField>
    <fullName>VCC_T2T_Demographics__c</fullName>
    <description>This field stores the data for Test to Treat Demographics when Medical Provider does an assessment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>T2T Demographics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>